carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__plan_snapshot_export_changes_mixed.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: strip_ansi(&output)
---
Execution Plan:


Exports:

  + new_export: String = 'hello'
  ~ changed: Int = 42 → 100
  - obsolete = 'gone'

Plan: 0 to add, 0 to change, 0 to destroy, 3 export change(s).
