carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__plan_snapshot_exports_multifile_bare_resource_ref_seed_stays_deferred.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + mock.compute.Instance inst.resource_binding
      name: "fixture-instance"
      arn: (known after apply)

Exports:

  + x = (known after apply)

Plan: 1 to add, 0 to change, 0 to destroy, 1 export change(s).
