carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__plan_snapshot_exports_multifile_use_alias_seed_does_not_leak.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:


Exports:

  + z = (known after apply)

Plan: 0 to add, 0 to change, 0 to destroy, 1 export change(s).
