carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__plan_snapshot_upstream_state_empty_exports.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: stripped
---
Execution Plan:

  + awscc.ec2.SecurityGroup awscc_ec2_security_group_e0524572
      group_description: "Web security group"
      tags:
        Name: "web-sg"
      vpc_id: (known after upstream apply: network.vpc.vpc_id)

Plan: 1 to add, 0 to change, 0 to destroy.
